EIS 0.7.0: compatibility with Java > 8 and general cleanup